<resources>
    <string name="app_name">Studio_C++</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wan">线路</string>
    <string name="find">定制线路</string>
    <string name="attention">伴米</string>
    <string name="head_si">四体不勤五谷不分人懒嘴馋花痴健忘</string>
    <string name="head_lin">林小姐</string>
    <string name="headmine">我的钱包</string>
    <string name="card">我的卡卷</string>
    <string name="stroke">已购行程</string>
    <string name="wand">我的收藏</string>
    <string name="atten">我的关注</string>
    <string name="services">联系客服</string>
    <string name="feedback">意见反馈</string>
    <string name="detection">版本检测</string>

</resources>
